# LearnOpenGL

./: CMakeLists.txt  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters
Shaders/: fragment_shader.glsl  vertex_shader.glsl
app/: OpenGL.vcxproj.filters
dependencies/GLAD/include/glad/: glad.h
dependencies/GLFW/lib/: glfw3.lib
src/: glad.c  main.cpp  shader.h  texture_handler.cpp  texture_handler.hpp
